# enigma-bombe

./: Dockerfile  README.md  pyproject.toml
data/: cipher_book_full.txt  cipher_book_shortened.txt  cipher_book_tests.txt  messages.txt  words_test.txt
data/learning/: identity.txt  none.txt
src/: decipher.py
src/enigma_bombe/: app.py  cipher.py  cipher_attack.py  learn_cipher.py  learn_cipher_data.py  learn_cipher_rnn.py  trienode.py
test/: conftest.py
test/unit/: test_api.py  test_attacks.py  test_cipher.py  test_learn.py  test_trie.py
