# pyproject.toml

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enigma-bombe"
version = "1.0.0"
dependencies = [
    "Flask",
    "spacy",
    "torch", 
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-timeout",
    "requests", 
    "black",
    "pylint",
]